Update string dan activity_simpanan.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="total_tabungan">Total Tabungan</string>
     <string name="april">April</string>
     <string name="no_rekening">No. Rekening</string>
+    <string name="profil">Data Anggota</string>
 </resources>
